# dizzy

./: .gitignore  DESIGN.md  README.md  TODO.md  pyproject.toml
.github/workflows/: python.yml
data/: settings.yml
data/common_services/uno/tasks/: moreofthem.py
data/entities/einz/: entity.yml
data/entities/einz/services/dos/: service.yml
data/entities/zwei/services/extrinsic/: service.yml
demo/: coupler.py  request.py  serve.py  start.sh  the_protocol.py
demo/custom_data/: protocol.py  settings.yml
demo/custom_data/common_services/project/: service.yml
demo/custom_data/entities/master/: entity.yml
demo/requests/: new_project.json
depres/manic/: Cargo.toml
depres/manic/src/: main.rs
dizzy/: __init__.py  __main__.py  entity.py  service.py  task.py  utils.py
dizzy/daemon/: __init__.py  __main__.py  abstract_protocol.py  async_client.py  client.py  protocol.py  server.py  settings.py
dizzy/daemon/client/: asy.py  basic.py  cli.py
dizzy/daemon/less/: README.md  __main__.py
dizzy/daemon/protocol/: __init__.py  __main__.py
dizzy/daemon/server/: __main__.py
dizzy/default_data/: protocol.py  settings.yml
dizzy/default_data/common_services/project/: service.yml
dizzy/default_data/common_services/status/: service.yml
dizzy/default_data/common_services/uno/: service.yml
dizzy/default_data/entities/drei/: entity.yml
dizzy/default_data/entities/einz/: entity.yml
dizzy/default_data/entities/zwei/: entity.yml
dizzy/entity/: __init__.py  __main__.py  manager.py
dizzy/service/: __init__.py  __main__.py  manager.py
dizzy/workflow/: __main __.py  design.md
tests/: test_default_entity_man.py  test_entity.py  test_gen.py  test_protocol.py  test_server.py  test_service.py  test_workflow.py
(+17 files in other folders)
