[tool.poetry]
name = "dizzy"
version = "0.1.0"
description = ""
authors = ["Grayson Miller <grayson.miller124@gmail.com>"]
readme = "README.md"

include = [
    { path = "default_data", format = ["sdist"] }
]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0"
zmq = "^0.0.0"
click = "^8.1.3"
pytest = "^7.4.0"
dataclass-wizard = "^0.22.2"
pydantic = "^2.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
dizzy = "dizzy.daemon.__main__:main"
dizzyless = "dizzy.daemon.less.__main__:main"
dizgen = "dizzy.daemon.dta_gen:main"

depres = "depres.__main__:main"
