[package]
name = "manic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["full", "tcp"] }
parking_lot = "0.12.1"
rayon = "1.7.0"
tokio = { version = "1.29.1", features = ["full"] }
